--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "augustluhrs <augustluhrs@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "next dev"
   },
   "dependencies": {
     "express": "^4.18.2",
